# tweety

./: .gitignore  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py
src/tweety/: __init__.py
